CAN: Avoid symbol clashes on static builds

Having the same function name in a global namespace
can lead the linker to pick an arbitrary one instead
the right one.

[ChangeLog] Fixed problems on static builds where
an arbitrary version of resolveSymbol() was used
instead the correct one.

Fixes: QTBUG-78546
Change-Id: I0ff9bc3e5905b3b9694dfe9d446b2a52700f213f
Reviewed-by: Karsten Heimrich <karsten.heimrich@qt.io>